# taalmoraal

./: .env.example  .gitignore  README.md  pyproject.toml
taalmoraal/: app.py
taalmoraal/whatsapp_js/.wwebjs_cache/: 2.3000.1024298727.html
taalmoraal/whatsapp_js/chrome-bin/chrome-mac/Chromium.app/Contents/: Info.plist
taalmoraal/whatsapp_js/chrome-bin/chrome-mac/Chromium.app/Contents/MacOS/: Chromium
taalmoraal/whatsapp_js/chrome-bin/chrome-mac/Chromium.app/Contents/Resources/af.lproj/: InfoPlist.strings
taalmoraal/whatsapp_js/chrome-bin/chrome-mac/Chromium.app/Contents/Resources/am.lproj/: InfoPlist.strings
taalmoraal/whatsapp_js/chrome-bin/chrome-mac/Chromium.app/Contents/Resources/ar.lproj/: InfoPlist.strings
taalmoraal/whatsapp_js/chrome-bin/chrome-mac/Chromium.app/Contents/Resources/ar_XB.lproj/: InfoPlist.strings
taalmoraal/whatsapp_js/chrome-bin/chrome-mac/Chromium.app/Contents/Resources/bg.lproj/: InfoPlist.strings
taalmoraal/whatsapp_js/chrome-bin/chrome-mac/Chromium.app/Contents/Resources/bn.lproj/: InfoPlist.strings
taalmoraal/whatsapp_js/chrome-bin/chrome-mac/Chromium.app/Contents/Resources/ca.lproj/: InfoPlist.strings
taalmoraal/whatsapp_js/chrome-bin/chrome-mac/Chromium.app/Contents/Resources/cs.lproj/: InfoPlist.strings
taalmoraal/whatsapp_js/chrome-bin/chrome-mac/Chromium.app/Contents/Resources/da.lproj/: InfoPlist.strings
taalmoraal/whatsapp_js/chrome-bin/chrome-mac/Chromium.app/Contents/Resources/de.lproj/: InfoPlist.strings
(+117 files in other folders)
