[project]
name = "taalmoraal"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Steman",email = "daniel-steman@live.nl"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.115.14,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
